# rust-libp2p-xtra

./: Cargo.toml  README.md  UPSTREAM-CHANGES.md
libp2p-stream-xtra/: Cargo.toml
libp2p-stream-xtra/src/: lib.rs
libp2p-stream-xtra/tests/: basic.rs
src/: lib.rs  libp2p_stream.rs  multiaddress_ext.rs  verify_peer_id.rs
tests/: actors.rs  basic.rs  hello_world.rs
