[package]
name = "libp2p-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-core = "0.32"
libp2p-noise = "0.35"
futures = "0.3"
multistream-select = "0.11"
yamux = "0.10"
void = "1"
anyhow = "1" # TODO: Remove
console-subscriber = "0.1"
tokio = { version = "1", features = ["time"] }
thiserror = "1"
displaydoc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
asynchronous-codec = "0.6"
env_logger = "0.9"
xtra = "0.5"
async-trait = "0.1"
xtra_productivity = { git = "https://github.com/comit-network/xtra-productivity" }
tokio-tasks = { git = "https://github.com/itchysats/itchysats" }
libp2p-plaintext = "0.32"
