[package]
name = "libp2p-xtra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra_productivity = { git = "https://github.com/comit-network/xtra-productivity" }
tokio-tasks = { git = "https://github.com/itchysats/itchysats" }
xtra = { version = "0.5", features = ["with-tokio-1"] }
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
rand = "0.8"
libp2p-core = "0.32"
libp2p-noise = "0.35"
futures = "0.3"
multistream-select = "0.11"
yamux = "0.10"
void = "1"
console-subscriber = "0.1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
asynchronous-codec = "0.6"
